# qt6-basic-example

./: CMakeLists.txt  README.md  qml.qrc
src/: main.cpp
ui/: main.qml
